<resources>
    <string name="app_name">GustFinder</string>
    <string name="GustFinder">GustFinder</string>
    <string name="app_title">GustFinder</string>
    <string name="my_locations">My places</string>
    <string name="my_map">My map</string>
    <string name="time_morning">9:00</string>
    <string name="time_noon">12:00</string>
    <string name="time_afternoon">15:00</string>
    <string name="time_evening">18:00</string>
    <string name="txt_my_map">My map</string>
    <string name="add_a_place">Add a place</string>
    <string name="my_places">My Places</string>
    <string name="other_resources">Interesting sources</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descr_wind_icon">Image of wind</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="hint_text">Place</string>
    <string name="txt_about">This app will help you get a quick overview of surf spots with relevant, but not too complex information. There is a map which will display your saved places. You can use this map to navigate with Google maps. I hope you will enjoy using this app</string>
</resources>
