<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/home" />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/about" />
    <item
        android:id="@+id/myPlacesFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/my_places" />
    <item
        android:id="@+id/userMapFragment"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/txt_my_map" />
    <item
        android:id="@+id/addPlaceFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_a_place" />
</menu>