<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="weather"
            type="com.timgeldof.gustfinder.network.models.marine_weather_api.Weather" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/quicksand"
            android:text="@{weather.date}" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            android:layout_margin="@dimen/margin_cardview_options">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/colorLightBlue">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/quicksand"
                            android:text="@string/time_morning"
                            app:layout_constraintBottom_toTopOf="@+id/img_morning_forecast"
                            app:layout_constraintEnd_toEndOf="@+id/img_morning_forecast"
                            app:layout_constraintStart_toStartOf="@+id/txt_morning_forecast"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_morning_forecast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:fontFamily="@font/quicksand"
                            android:text="@{weather.hourly[2].getSurfStatistics()}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/img_morning_forecast"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView6" />

                        <ImageView
                            android:id="@+id/img_morning_forecast"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="24dp"
                            app:layout_constraintBottom_toBottomOf="@+id/txt_morning_forecast"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/txt_morning_forecast"
                            app:layout_constraintTop_toTopOf="@+id/txt_morning_forecast"
                            app:srcCompat="@drawable/wind_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/colorSand">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/quicksand"
                            android:text="@string/time_noon"
                            app:layout_constraintBottom_toTopOf="@+id/img_noon_forecast"
                            app:layout_constraintEnd_toEndOf="@+id/img_noon_forecast"
                            app:layout_constraintStart_toStartOf="@+id/txt_noon_forecast"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_noon_forecast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:fontFamily="@font/quicksand"
                            android:text="@{weather.hourly[3].getSurfStatistics()}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/img_noon_forecast"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView5" />

                        <ImageView
                            android:id="@+id/img_noon_forecast"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="24dp"
                            app:layout_constraintBottom_toBottomOf="@+id/txt_noon_forecast"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/txt_noon_forecast"
                            app:layout_constraintTop_toTopOf="@+id/txt_noon_forecast"
                            app:srcCompat="@drawable/wind_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/colorBlue">

                        <TextView
                            android:id="@+id/TextView69"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/quicksand"
                            android:text="@string/time_afternoon"
                            app:layout_constraintBottom_toTopOf="@+id/img_afternoon_forecast"
                            app:layout_constraintEnd_toEndOf="@+id/img_afternoon_forecast"
                            app:layout_constraintStart_toStartOf="@+id/txt_afternoon_forecast"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_afternoon_forecast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:fontFamily="@font/quicksand"
                            android:text="@{weather.hourly[4].getSurfStatistics()}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/img_afternoon_forecast"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/TextView69" />

                        <ImageView
                            android:id="@+id/img_afternoon_forecast"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="24dp"
                            app:layout_constraintBottom_toBottomOf="@+id/txt_afternoon_forecast"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/txt_afternoon_forecast"
                            app:layout_constraintTop_toTopOf="@+id/txt_afternoon_forecast"
                            app:srcCompat="@drawable/wind_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/colorDarkBlue">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/quicksand"
                            android:text="@string/time_evening"
                            app:layout_constraintBottom_toTopOf="@+id/img_evening_forecast"
                            app:layout_constraintEnd_toEndOf="@+id/img_evening_forecast"
                            app:layout_constraintStart_toStartOf="@+id/txt_evening_forecast"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_evening_forecast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:fontFamily="@font/quicksand"
                            android:text="@{weather.hourly[5].getSurfStatistics()}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/img_evening_forecast"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView7" />

                        <ImageView
                            android:id="@+id/img_evening_forecast"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="24dp"
                            app:layout_constraintBottom_toBottomOf="@+id/txt_evening_forecast"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/txt_evening_forecast"
                            app:layout_constraintTop_toTopOf="@+id/txt_evening_forecast"
                            app:srcCompat="@drawable/wind_icon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>